--- a/views/mydata.pug
+++ b/views/mydata.pug
@@ -1,5 +1,5 @@
 extends layout
 
 block content
-  h1= Jaya Lakshmi Medikonda
+  h1= title
   p I am  #{title} student of North west Missouri state university. I am doing my assignment 9 in Webapps using express.
